--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,9 +1,9 @@
-@import "~react-image-gallery/styles/css/image-gallery.css";
+/*@import "~react-image-gallery/styles/css/image-gallery.css";*/
 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -14,7 +14,7 @@ code {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol";
+  "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.5;
   color: #24292e;
@@ -33,6 +33,13 @@ input.error {
   border-color: red;
 }
 
+.site-card-border-less-wrapper {
+  padding: 30px;
+  background: #ececec;
+}
+[data-theme="dark"] .site-card-border-less-wrapper {
+  background: #303030;
+}
 
 .input-feedback {
   color: red;
@@ -54,4 +61,17 @@ td,th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.headerTop{
+  font-family: 'Raleway', sans-serif;
+  font-size: 60px;
+  text-transform: uppercase;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  align-content: center;
+  font-weight: 800;
+  color: #ffffff;
+  stroke-width: 6px;
+  stroke: #000000;
 }
